log/build_2026-02-05_14-44-58/eecs256aw25/stdout_stderr.log
running egg_info
writing ../../build/eecs256aw25/eecs256aw25.egg-info/PKG-INFO
writing dependency_links to ../../build/eecs256aw25/eecs256aw25.egg-info/dependency_links.txt
writing entry points to ../../build/eecs256aw25/eecs256aw25.egg-info/entry_points.txt
writing requirements to ../../build/eecs256aw25/eecs256aw25.egg-info/requires.txt
writing top-level names to ../../build/eecs256aw25/eecs256aw25.egg-info/top_level.txt
reading manifest file '../../build/eecs256aw25/eecs256aw25.egg-info/SOURCES.txt'
writing manifest file '../../build/eecs256aw25/eecs256aw25.egg-info/SOURCES.txt'
running build
running build_py
copying eecs256aw25/orient_a_star.py -> /home/kjames/ros2_ws/build/eecs256aw25/build/lib/eecs256aw25
copying eecs256aw25/point_a_star.py -> /home/kjames/ros2_ws/build/eecs256aw25/build/lib/eecs256aw25
copying eecs256aw25/test_a_star.py -> /home/kjames/ros2_ws/build/eecs256aw25/build/lib/eecs256aw25
running install
running install_lib
copying /home/kjames/ros2_ws/build/eecs256aw25/build/lib/eecs256aw25/orient_a_star.py -> /home/kjames/ros2_ws/install/eecs256aw25/lib/python3.12/site-packages/eecs256aw25
copying /home/kjames/ros2_ws/build/eecs256aw25/build/lib/eecs256aw25/point_a_star.py -> /home/kjames/ros2_ws/install/eecs256aw25/lib/python3.12/site-packages/eecs256aw25
copying /home/kjames/ros2_ws/build/eecs256aw25/build/lib/eecs256aw25/test_a_star.py -> /home/kjames/ros2_ws/install/eecs256aw25/lib/python3.12/site-packages/eecs256aw25
byte-compiling /home/kjames/ros2_ws/install/eecs256aw25/lib/python3.12/site-packages/eecs256aw25/orient_a_star.py to orient_a_star.cpython-312.pyc
  File "/home/kjames/ros2_ws/install/eecs256aw25/lib/python3.12/site-packages/eecs256aw25/orient_a_star.py", line 13
    x, y, theta =
                 ^
SyntaxError: invalid syntax

byte-compiling /home/kjames/ros2_ws/install/eecs256aw25/lib/python3.12/site-packages/eecs256aw25/point_a_star.py to point_a_star.cpython-312.pyc
byte-compiling /home/kjames/ros2_ws/install/eecs256aw25/lib/python3.12/site-packages/eecs256aw25/test_a_star.py to test_a_star.cpython-312.pyc
running install_data
  File "/home/kjames/ros2_ws/install/eecs256aw25/lib/python3.12/site-packages/eecs256aw25/test_a_star.py", line 94
    all_rows = [p[0] for p in obstacles] + [s[0] for s in closed_positions] + \\
                                                                               ^
SyntaxError: unexpected character after line continuation character

running install_egg_info
removing '/home/kjames/ros2_ws/install/eecs256aw25/lib/python3.12/site-packages/eecs256aw25-0.0.0-py3.12.egg-info' (and everything under it)
Copying ../../build/eecs256aw25/eecs256aw25.egg-info to /home/kjames/ros2_ws/install/eecs256aw25/lib/python3.12/site-packages/eecs256aw25-0.0.0-py3.12.egg-info
running install_scripts
Installing closed_loop script to /home/kjames/ros2_ws/install/eecs256aw25/lib/eecs256aw25
Installing listener script to /home/kjames/ros2_ws/install/eecs256aw25/lib/eecs256aw25
Installing open_loop script to /home/kjames/ros2_ws/install/eecs256aw25/lib/eecs256aw25
Installing talker script to /home/kjames/ros2_ws/install/eecs256aw25/lib/eecs256aw25
writing list of installed files to '/home/kjames/ros2_ws/build/eecs256aw25/install.log'
